--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
    <header></header>
-   <main></main>
+   <main>
+      <h1>MFP</h1>
+   </main>
    <footer></footer>
 </body>
 </html>
