--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <header></header>
    <main>
       <h1>MFP</h1>
+      <a href="https://olexanderlyagera.github.io/my-first-project/">MFP</a>
    </main>
    <footer></footer>
 </body>
