--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
    <title>MFP</title>
 </head>
 <body>
-   <header></header>
+   <header>
+      
+   </header>
    <main>
       <h1>MFP</h1>
       <a href="https://olexanderlyagera.github.io/my-first-project/">MFP</a>
+      <h2>kjhijhni</h2>
+      <h3>okjnmojkm</h3>
    </main>
    <footer></footer>
 </body>
